# EPOCH

./: CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/epoch/: SKILL.md
projects/: fibonacci_run.yaml  iris_run.yaml  mnist_run.yaml  sentiment_run.yaml  wine_run.yaml
projects/fibonacci/: fib.py  pyproject.toml
projects/fibonacci/run-20260306-1600/: baseline_metrics.json  delta_round_2.json  delta_round_3.json  delta_round_4.json  experiment.tex  pr_body_round2.md  pr_body_round3.md  pr_body_round4.md  run_summary.md
projects/fibonacci/tests/: conftest.py  test_fib.py
projects/fraud_detection_test/data/: eval.jsonl  train.jsonl
projects/iris/: .gitignore  evaluate.py  prepare_data.py  pyproject.toml
projects/iris/rules/: rules.py
projects/iris/run-20260306-2013/: baseline_metrics.json  delta_round_2.json  delta_round_3.json  eval_results.json  experiment.tex  pr_body.md  pr_body_round2.md  pr_body_round3.md  run_summary.md  train_results.json
projects/iris_project/: misclassification_analysis.md
projects/iris_project/data/: iris_eval.csv  iris_train.csv
projects/iris_project/run-20260305-1151/: completion_report.md
projects/mnist/: .gitignore  evaluate.py  hyperparams.json  prepare_data.py  pyproject.toml
projects/mnist/run-20260306-1957/: baseline_metrics.json  delta_round_2.json  delta_round_3.json  delta_round_3_retry.json  eval_metrics.json  experiment.tex  pr_body.md  pr_body_round2.md  pr_body_round3.md  pr_body_round3_retry.md  (+1 more)
projects/sentiment/: evaluate.py  prepare_data.py  pyproject.toml
(+30 files in other folders)
