[project]
name = "fibonacci"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["gmpy2"]

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout"]

[tool.pytest.ini_options]
rootdir = "."
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
